creat the signup,button and form input componnet

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,7 +3,7 @@
 }
 body {
   margin: 0;
-  font-family: "Fira Sans Condensed", sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif !important;
 }
 a {
   text-decoration: none;
