Moved to style components & add missing functionality

--- a/src/components/sign-in-form/SignIn.module.scss
+++ b/src/components/sign-in-form/SignIn.module.scss
@@ -1,4 +1,4 @@
-.sign-up-container {
+.signUpContainer {
   display: flex;
   flex-direction: column;
   width: 380px;
@@ -6,7 +6,7 @@
   h2 {
     margin: 10px 0px;
   }
-  .buttons-container {
+  .buttonsContainer {
     display: flex;
     justify-content: space-between;
   }
